# Vulkan_Simulator

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.MD  Vulkan_Simulator.cpp  Vulkan_Simulator.h  definitions.h  filereader.cpp  filereader.h  frag.spv  launch.vs.json  renderer.cpp  renderer.h  shaderVulkanSimulator.frag  shaderVulkanSimulator.vert  tiny_gltf.cpp  tiny_gltf.h  vert.spv
3D_Model/G_GLB/: g.glb
shaders/: shader – kopio.frag  shader – kopio.vert  shader.vert  vert.spv
